# byteframe

./: .gitignore  Cargo.toml  README.md
examples/: simple_echo.rs
src/: checksum.rs  codec.rs  framing.rs  header.rs  lib.rs  packet.rs  reader.rs  writer.rs
